--- a/client/socket-client/app/src/main/res/layout/activity_maps.xml
+++ b/client/socket-client/app/src/main/res/layout/activity_maps.xml
@@ -1,3 +1,6 @@
+<RelativeLayout android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,3 +9,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.microsoft.pacmania.MapsActivity" />
+    <TextView android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:singleLine="true"
+        android:id="@+id/scores"></TextView>
+    </RelativeLayout>
