--- a/client/socket-client/app/src/main/res/layout/activity_maps.xml
+++ b/client/socket-client/app/src/main/res/layout/activity_maps.xml
@@ -9,8 +9,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.microsoft.pacmania.MapsActivity" />
-    <TextView android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:singleLine="true"
-        android:id="@+id/scores"></TextView>
-    </RelativeLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text=""
+        android:id="@+id/scores"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+</RelativeLayout>
